--- a/popup.html
+++ b/popup.html
@@ -1,126 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Token Extractor</title>
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      padding: 20px;
-      background-color: #181818;
-      color: #ffffff;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-width: 95vw;
-      min-height: 90vh;
-      overflow: hidden;
-      position: relative; 
-    }
-
-    h2 {
-      margin-top: 0;
-      font-size: 24px;
-      color: #ff7f50;
-      text-align: center;
-      font-weight: 700;
-      letter-spacing: 0.7px;
-    }
-
-    #status {
-      width: 100%;
-      max-width: 350px;
-      margin-bottom: 20px;
-      padding: 20px;
-      background-color: #282828;
-      border-radius: 12px;
-      font-size: 15px;
-      word-break: break-all;
-      text-align: center;
-      position: relative;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    #token {
-      width: 100%;
-      max-width: 350px;
-      margin-bottom: 20px;
-      padding: 20px;
-      background-color: #282828;
-      border-radius: 12px;
-      font-size: 15px;
-      word-break: break-all;
-      text-align: center;
-      display: none;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    button {
-      width: 100%;
-      max-width: 350px;
-      padding: 14px; 
-      margin-top: 14px;
-      background-color: #ff7f50;
-      color: #ffffff;
-      border: none;
-      border-radius: 12px;
-      font-size: 16px;
-      font-weight: 500;
-      cursor: pointer;
-      transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); 
-    }
-
-    button:hover {
-      background-color: #ff6347;
-      transform: translateY(-2px);
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25); 
-    }
-
-    button:active {
-      background-color: #ff4500;
-      transform: translateY(0);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); 
-    }
-
-    .loader {
-      border: 4px solid rgba(243, 243, 243, 0.3);
-      border-radius: 50%;
-      border-top: 4px solid #ff7f50;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    @keyframes spin {
-      0% { transform: translate(-50%, -50%) rotate(0deg); }
-      100% { transform: translate(-50%, -50%) rotate(360deg); }
-    }
-
-    @media (max-width: 400px) {
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Crunchyroll Token Extractor</title>
+    <style>
       body {
-        padding: 10px;
+        font-family: "Inter", sans-serif;
+        padding: 20px;
+        background-color: #181818;
+        color: #ffffff;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-width: 95vw;
+        min-height: 90vh;
+        overflow: hidden;
+        position: relative;
       }
 
-      #status, #token, button {
-        max-width: 100%;
+      h2 {
+        margin-top: 0;
+        font-size: 24px;
+        color: #ff7f50;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 0.7px;
       }
-    }
-  </style>
-</head>
-<body>
-  <h2>Crunchyroll Token Extractor</h2>
-  <div id="status">Please make sure you are logged in on Crunchyroll.</div>
-  <div id="token"></div>
-  <button id="redirectToHistory">Go to History Page</button>
-  <button id="getToken" style="display:none;">Get Token</button>
-  <script src="popup.js"></script>
-</body>
+
+      #status {
+        width: 100%;
+        max-width: 350px;
+        margin-bottom: 20px;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 12px;
+        font-size: 15px;
+        word-break: break-all;
+        text-align: center;
+        position: relative;
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+      }
+
+      #token {
+        width: 100%;
+        max-width: 350px;
+        margin-bottom: 20px;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 12px;
+        font-size: 15px;
+        word-break: break-all;
+        text-align: center;
+        display: none;
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+      }
+
+      button {
+        width: 100%;
+        max-width: 350px;
+        padding: 14px;
+        margin-top: 14px;
+        background-color: #ff7f50;
+        color: #ffffff;
+        border: none;
+        border-radius: 12px;
+        font-size: 16px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
+
+      button:hover {
+        background-color: #ff6347;
+        transform: translateY(-2px);
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
+      }
+
+      button:active {
+        background-color: #ff4500;
+        transform: translateY(0);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
+
+      .loader {
+        border: 4px solid rgba(243, 243, 243, 0.3);
+        border-radius: 50%;
+        border-top: 4px solid #ff7f50;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      @keyframes spin {
+        0% {
+          transform: translate(-50%, -50%) rotate(0deg);
+        }
+        100% {
+          transform: translate(-50%, -50%) rotate(360deg);
+        }
+      }
+
+      footer {
+        margin-top: 12px;
+        font-size: 12px;
+        color: #bbbbbb;
+        text-align: center;
+      }
+
+      @media (max-width: 400px) {
+        body {
+          padding: 10px;
+        }
+
+        #status,
+        #token,
+        button {
+          max-width: 100%;
+        }
+      }
+      #testToken {
+        margin-bottom: 12px;
+        color: #fff !important;
+        text-align: center;
+        font-weight: 700;
+        width: 50%;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Crunchyroll Token Extractor</h2>
+
+    <a id="testToken" style="display: none" href="/check-api.html">
+      <button>Test Token</button>
+    </a>
+    <div id="status">Please make sure you are logged in on Crunchyroll.</div>
+    <div id="token"></div>
+    <button id="redirectToHistory">Go to History Page</button>
+    <button id="getToken" style="display: none">Get Token</button>
+    <footer>
+      Made with ❤️ by
+      <a href="https://leoncyriac.me" target="_blank" style="color: #ff7f50"
+        >Harshit</a
+      >
+      | Instagram:
+      <a
+        href="https://instagram.com/_harshit.xd"
+        target="_blank"
+        style="color: #ff7f50"
+        >_harshit.xd</a
+      >
+    </footer>
+    <script src="popup.js"></script>
+  </body>
 </html>
